# fakeroot

./: CMakeLists.txt  Makefile.am  config.h.in  faked.c  libfakeroot.c  libfakeroot_time64.c  wrapawk  wrapfunc.inp
cmake/: GenerateGlibcWrappers.cmake  GetTargetTriple.cmake
scripts/: fakeroot.in
test/: defs.in
